# rtx-wtf-shorten-api

./: .gitignore  Makefile
api/: shorten-api.json  shorten-api.tpl
terraform/: .terraform.lock.hcl  acm.tf  api_gw.tf  dynamodb.tf  iam.tf  main.tf  outputs.tf  route53.tf  url_shorten_handler.tf
url-shorten-ft/: Makefile  pyproject.toml
url-shorten-ft/tests/: conftest.py  test_shorten_service.py
url-shorten-handler/: Makefile  README.md  pyproject.toml
url-shorten-handler/tests/: conftest.py  test_del_url_logic.py  test_get_url_list_logic.py  test_get_url_logic.py  test_get_url_stats_logic.py  test_handler.py  test_ip_processor.py  test_options_url_logic.py  test_post_url_logic.py  test_utils.py
url-shorten-handler/tests/fixtures/: api_gw_event.py  requests.py
url-shorten-handler/tests/logic/: test_get_url_stats_logic.py
url-shorten-handler/url_shorten_handler/: controller.py  handler.py  logic.py  utils.py
url-shorten-handler/url_shorten_handler/ip_processor/: ip_processor.py
url-shorten-handler/url_shorten_handler/model/: shortened_url.py
url-shorten-handler/url_shorten_handler/util/: event_util.py  exception_decorator.py  ip_processor.py  logging.py
