[tool.poetry]
name = "url-shorten-handler"
version = "0.1.0"
description = "Handle shorten url requests for shorten.rtx.wtf"
authors = ["Bartosz Perczynski <bartosz_p@hotmail.com>"]
readme = "README.md"
packages = [{include = "url_shorten_handler"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.2.1"
boto3 = "^1.28.30"
shortuuid = "^1.0.11"
pynamodb = "^5.5.0"
httpx = "^0.25.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
assertpy = "^1.1"
pytest-mock = "^3.11.1"
moto = "^4.2.6"
pytest-httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
